--- a/.pipelines/vscode-powershell-Official.yml
+++ b/.pipelines/vscode-powershell-Official.yml
@@ -101,10 +101,7 @@ extends:
             inputs:
               archiveFilePatterns: $(Pipeline.Workspace)/PowerShellEditorServices.zip
               destinationFolder: $(Build.SourcesDirectory)/modules
-          - pwsh: |
-              Register-PSRepository -Name CFS -SourceLocation "https://pkgs.dev.azure.com/powershell/PowerShell/_packaging/powershell/nuget/v2" -InstallationPolicy Trusted
-              Install-Module -Repository CFS -Name Microsoft.PowerShell.PSResourceGet
-              ./tools/installPSResources.ps1 -PSRepository CFS
+          - pwsh: ./tools/installPSResources.ps1 -PSRepository CFS
             displayName: Install PSResources
           - pwsh: Invoke-Build Build -Configuration $(BuildConfiguration)
             displayName: Build
@@ -163,10 +160,7 @@ extends:
             inputs:
               archiveFilePatterns: $(Pipeline.Workspace)/PowerShellEditorServices.zip
               destinationFolder: $(Build.SourcesDirectory)/modules
-          - pwsh: |
-              Register-PSRepository -Name CFS -SourceLocation "https://pkgs.dev.azure.com/powershell/PowerShell/_packaging/powershell/nuget/v2" -InstallationPolicy Trusted
-              Install-Module -Repository CFS -Name Microsoft.PowerShell.PSResourceGet
-              ./tools/installPSResources.ps1 -PSRepository CFS
+          - pwsh: ./tools/installPSResources.ps1 -PSRepository CFS
             displayName: Install PSResources
           - pwsh: Invoke-Build Test -Configuration $(BuildConfiguration)
             displayName: Run tests
